# AplicandoFiltros_ImagenesMedicas

cpp_app/: CMakeLists.txt
cpp_app/input/: test1.IMA
cpp_app/src/: day2_dicom_reader.cpp  main.cpp
